# jax-fno

./: .gitignore  404.html  README.md  check_data_utils.py  check_spectral_conv.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
api/integrate_api/: index.html
api/learn_api/: index.html
api/operators/: index.html
api/solver/: index.html
data/: .gitignore
data/burgers/scripts/: downsample.py  generate.py  sensitivity_analysis.py
docs/: index.md
docs/api/: integrate_api.md  learn_api.md  operators.md  solver.md
docs/guides/: integrate_guide.md  solver_guide.md
docs/tutorials/: learning_antiderivative.md  solving_heat_equation.md
examples/: burgers_fno.py  burgers_solver.ipynb  fno_burgers.ipynb  fno_simple.ipynb  heat_solver.ipynb  heat_solver.py  solve_burgers.ipynb  solve_heat.ipynb
guides/integrate_guide/: index.html
guides/solver_guide/: index.html
profile/: profile_solvers.py
scripts/: generate_burgers.py
src/jax_fno/: __init__.py
src/jax_fno/data_utils/: __init__.py  readwrite.py
src/jax_fno/integrate/: __init__.py  custom_types.py  linsolvers.py  rootfinders.py  solve.py
src/jax_fno/integrate/linsolvers/: __init__.py  direct.py  krylov.py  protocol.py  spectral.py
src/jax_fno/integrate/rootfinders/: __init__.py  newtonraphson.py  protocol.py
src/jax_fno/integrate/timesteppers/: __init__.py  base.py  explicit.py  imex.py  implicit.py  protocol.py
src/jax_fno/learn/: __init__.py  fno1d.py
src/jax_fno/operators/: __init__.py  fno1d.py  fourier_layer.py  initializers.py
src/jax_fno/solver/: __init__.py  linearsolver.py  newtonraphson.py  solve.py  solve_ivp.py
src/jax_fno/solver/setup/: boundary_conditions.py
src/jax_fno/solver/timesteppers/: __init__.py  base.py  explicit.py  implicit.py  stepper.py
src/jax_fno/solvers/: __init__.py  derivatives.py  grid.py  ivp.py
src/jax_fno/solvers/equations/: __init__.py  burgers.py  heat.py
tests/: test_learn.py  test_operators.py  test_rootfinders.py  test_solve.py  test_solver.py  test_solvers.py  test_timesteppers.py
tutorials/learning_antiderivative/: index.html
tutorials/solving_heat_equation/: index.html
