[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jax_fno"
version = "0.6.0"
description = "JAX implementation of Fourier Neural Operators for solving PDEs"
authors = ["christianfenton"]
readme = "README.md"
packages = [{include = "jax_fno", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
jax = ">=0.4.0"
jaxlib = ">=0.4.0"
flax = ">=0.8.0"
optax = ">=0.1.0"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
h5py = "^3.15.1"

[tool.poetry.group.notebooks.dependencies]
jupyter = ">=1.0.0"
seaborn = ">=0.11.0"
scipy = ">=1.9.0"
matplotlib = "^3.10.7"
ipykernel = "^7.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0.0"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=0.18.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.19.0"
mkdocs-autorefs = "^1.4.3"
pymdown-extensions = "^10.17.1"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=jax_fno --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "flax.*",
    "optax.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true